Got IdentityUser stuff working. Can get to login/register screen.

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CST465Lab8
 @using CST465Lab8.Models
+@using CST465Lab8.Areas.Identity.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
