Did AdminController stuff and started adding extra fields to custom User class. Need to rework database first before it can work.

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,7 +1,71 @@
 ﻿
-@{
-    ViewData["Title"] = "Index";
+@inject RoleManager<IdentityRole> RoleMan
+@inject UserManager<CST465Lab8User> UserMan
+
+
+
+<h2>Create Role</h2>
+<form asp-action="CreateRole" asp-controller="Admin">
+    @Html.AntiForgeryToken()
+    <label for="RoleName" class="control-label">Role Name</label>
+    <input type="text" id="RoleName" name="RoleName" class="form-control" />
+    <button type="Submit" class="btn btn-default">Create Role</button>
+</form>
+
+<h2>Add User Roles</h2>
+<form asp-action="AddUserToRole" asp-controller="Admin">
+    @Html.AntiForgeryToken()
+    <label for="Email" class="control-label">Email</label>
+    <select id="Email" name="Email" class="form-control">
+        @foreach (var user in UserMan.Users)
+        {
+            <option>@user.Email</option>
+        }
+    </select>
+
+    <label for="RoleName" class="control-label">Role</label>
+    <select id="RoleName" name="RoleName" class="form-control">
+        @foreach (var role in RoleMan.Roles)
+        {
+            <option>@role.Name</option>
+        }
+    </select>
+
+    <button type="Submit" class="btn btn-default">Give Role</button>
+</form>
+
+
+
+<div class="row">
+    <div class="col-6">
+        <h2>Roles</h2>
+        <ul class="list-group">
+            @foreach (var role in RoleMan.Roles)
+            {
+                <li class="list-group-item">@role.Name</li>
+            }
+        </ul>
+
+    </div>
+    <div class="col-6">
+        <h2>Users</h2>
+        <ul class="list-group">
+            @foreach (var user in UserMan.Users)
+            {
+                <li class="list-group-item">@user.Email</li>
+            }
+        </ul>
+    </div>
+</div>
+<form asp-action="AddUserToRole" asp-controller="Admin" method="post">
+    @Html.AntiForgeryToken()
+    @Html.Hidden("Email", User.Identity.Name)
+    @Html.Hidden("RoleName", "Admin")
+    <button type="submit" class="btn btn-primary">Make me admin</button>
+</form>
+
+<h2>Admins</h2>
+@foreach (var user in UserMan.GetUsersInRoleAsync("Admin").Result)
+{
+    <div>@user.UserName</div>
 }
-
-<h2>Index</h2>
-
