--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using CST465Lab8
 @using CST465Lab8.Models
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Identity
 @using CST465Lab8.Areas.Identity.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
