Redid database stuff and added custom fields to registration.

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,21 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.Field1"></label>
+                <input asp-for="Input.Field1" class="form-control" />
+                <span asp-validation-for="Input.Field1" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Field2"></label>
+                <input asp-for="Input.Field2" class="form-control" />
+                <span asp-validation-for="Input.Field2" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Field3"></label>
+                <input asp-for="Input.Field3" class="form-control" />
+                <span asp-validation-for="Input.Field3" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-default">Register</button>
         </form>
     </div>
